@@ -87,24 +87,6 @@ the next request.
     >>> res
     [[1], {}]
 
-Appengine Transport
-===================
-
-There is also an appengine transport. With this transport it is
-possible to make remote calls from an appengine app.
-
-Note that we do not have a dependency on the google.appengine.*
-packages in this package, so we cannot test it here because it raises
-an ImportError.
-
-The proxy is created like this.
-
-    >>> c = proxy.ServerProxy('http://localhost:12345',
-    ...     transport_impl=proxy.GAEJSONRPCTransport)
-    Traceback (most recent call last):
-    ...
-    ImportError: No module named google.appengine.api
-
 
 Compatibility-Mode
 ==================
@@ -118,3 +100,23 @@ For compatibilty to JSONRPC v1.0 we have to pass the id to the request::
     HTTP_ACCEPT_ENCODING identity
     HTTP_HOST localhost:12345
     HTTP_USER_AGENT lovey.jsonpc.proxy (httplib)
+
+
+Timeout
+=======
+
+Setting a request timeout on a proxy requires eighter python2.6 or GAE python.
+For testing purpose we fake the exception in case our python does not support
+http timeout::
+
+    >>> import sys
+    >>> version = int("%i%i"%sys.version_info[0:2])
+    >>> if version >= 26:
+    ...     c = proxy.ServerProxy('http://localhost:12345', timeout=2)
+    ...     res = c.echo()
+    ... else:
+    ...     # used python doesn't support httplib timeout
+    ...     from socket import timeout
+    ...     raise timeout('timed out')
+    Traceback (most recent call last):
+    timeout: timed out
